Amazon s3 added for uploading docs and profilepics

--- a/templates/dashboard/pages/assignTruck/assignTruck.html
+++ b/templates/dashboard/pages/assignTruck/assignTruck.html
@@ -73,7 +73,7 @@
       <div class="row grid-row">       
           <div class="col-sm-12">
               <div class="pull-right">
-                  <button type="button" class="btn btn-default btn-primary sendrequest" _id="{{_id}}">Send Request</button>
+                  <span class="grid-row-options-button sendrequest" _id="{{_id}}">Send Request</span>
               </div>
           </div>       
       </div>
