--- a/templates/dashboard/pages/manageBankAccounts/manageBankAccounts.html
+++ b/templates/dashboard/pages/manageBankAccounts/manageBankAccounts.html
@@ -56,7 +56,7 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
-                <button type="button" class="btn btn-default btn-primary edit-account" _id="{{_id}}">Edit</button>
+                <span class="grid-row-options-button edit-account" _id="{{_id}}">Edit</span>
             </div>
         </div>       
     </div>
