--- a/templates/dashboard/pages/manageUsers/manageUsers.html
+++ b/templates/dashboard/pages/manageUsers/manageUsers.html
@@ -54,7 +54,8 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
-                <button type="button" class="btn btn-default btn-primary edit-user" _id="{{_id}}">Edit</button>
+                <span class="grid-row-options-button edit-user" _id="{{_id}}">Edit</span>
+                
             </div>
         </div>       
     </div>
