--- a/templates/dashboard/pages/uploadDocs/uploadDocs.less
+++ b/templates/dashboard/pages/uploadDocs/uploadDocs.less
@@ -15,6 +15,13 @@
     visibility: hidden !important;
   }
 
+   input[type=file]{
+     width: 100px;
+    color:transparent;
+} 
+
+
+
   .show {
     display: block !important;
   }
