--- a/templates/dashboard/pages/viewProfile/viewProfile.html
+++ b/templates/dashboard/pages/viewProfile/viewProfile.html
@@ -19,8 +19,17 @@
        {{#with data}}
         <div class="col-sm-12" >
               <div class="row">
-                <div class="col-sm-3" align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
-
+                <div class="col-sm-3" align="center"> 
+                  {{#if profilePic}}
+                  <img alt="User Pic" 
+                   src={{profilePic}} 
+                   class="user img-responsive">
+                  {{else}}
+                  <img alt="User Pic"
+                   src="../../../../img/default_image.png" 
+                   class="user img-responsive">
+                  {{/if}}
+                </div>
                 <div class="col-sm-9 col-sm-9 "> 
                   <table class="table table-user-information">
                     <tbody>
