--- a/templates/dashboard/pages/assignTruck.html
+++ b/templates/dashboard/pages/assignTruck.html
@@ -61,7 +61,7 @@ dt{display:block;float:left;text-align:left}dt:after{content:':'}.top-buffer{mar
       <div class="row grid-row">       
           <div class="col-sm-12">
               <div class="pull-right">
-                  <button type="button" class="btn btn-default btn-primary sendrequest" _id="{{_id}}">Send Request</button>
+                  <span class="grid-row-options-button sendrequest" _id="{{_id}}">Send Request</span>
               </div>
           </div>       
       </div>
