--- a/templates/dashboard/pages/manageTrucks.html
+++ b/templates/dashboard/pages/manageTrucks.html
@@ -91,7 +91,7 @@ dt{display:block;float:left;text-align:left}dt:after{content:':'}.top-buffer{mar
         <div class="col-sm-12">
             <div class="pull-right">
                 {{#each (getTruckGridOptions status _id)}}     
-                <button type="button" class="btn btn-default btn-primary {{id}}" _id="{{_id}}">{{option}}</button>
+                <span class="grid-row-options-button {{id}}" _id="{{_id}}">{{option}}</span>
                 {{/each}}
             </div>
         </div>       
