--- a/templates/dashboard/pages/payments/payments.html
+++ b/templates/dashboard/pages/payments/payments.html
@@ -206,7 +206,7 @@
         <div class="col-sm-12">
             <div class="pull-right">
                 {{#each (getPaymentGridOptions status _id)}}     
-                <button type="button" class="btn btn-default btn-primary {{id}}" _id="{{_id}}">{{option}}</button>
+                <span class="grid-row-options-button {{id}}" _id="{{_id}}">{{option}}</span>
                 {{/each}}
             </div>
         </div>       
