--- a/templates/dashboard/pages/viewProfile.html
+++ b/templates/dashboard/pages/viewProfile.html
@@ -1,4 +1,7 @@
 {{{{raw-helper}}}}
+<style>
+.imgCircle{border-radius:50%}.user{display:inline-block;width:150px;height:150px;border-radius:50%;background-repeat:no-repeat;background-position:center center;background-size:cover}
+</style>
 {{{{/raw-helper}}}}
 {{> header}}
 <div class='view-profile'>
@@ -18,7 +21,17 @@
        {{#with data}}
         <div class="col-sm-12" >
               <div class="row">
-                <div class="col-sm-3" align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
+                <div class="col-sm-3" align="center"> 
+                  {{#if profilePic}}
+                  <img alt="User Pic" 
+                   src={{profilePic}} 
+                   class="user img-responsive">
+                  {{else}}
+                  <img alt="User Pic"
+                   src="../../../../img/default_image.png" 
+                   class="user img-responsive">
+                  {{/if}}
+                </div>
                 <div class="col-sm-9 col-sm-9 "> 
                   <table class="table table-user-information">
                     <tbody>
