--- a/templates/dashboard/pages/uploadDocs/uploadDocs.html
+++ b/templates/dashboard/pages/uploadDocs/uploadDocs.html
@@ -79,9 +79,9 @@
                   <td>
                     <div class="actions">
                     <button class="btn btn-glyphicon" role="button"><span  _id="{{_id}}" id="download" class="glyphicon glyphicon-save"></span></button>
-                    <!-- {{#isloggedIn (getLoggedInUser) createdby._id}} -->
+                     {{#isloggedIn (getLoggedInUser) createdby}} 
                     <button class="btn btn-glyphicon"  role="button"><span _id="{{_id}}" id="delete" class="glyphicon glyphicon-trash"></span></button>
-                  <!--   {{/isloggedIn}} -->
+                     {{/isloggedIn}}
                     </div>
                   </td>
                 </tr>
