--- a/templates/dashboard/pages/viewProfile.html
+++ b/templates/dashboard/pages/viewProfile.html
@@ -28,7 +28,7 @@
                    class="user img-responsive">
                   {{else}}
                   <img alt="User Pic"
-                   src="../../../../img/default_image.png" 
+                   src="/img/default_image.png" 
                    class="user img-responsive">
                   {{/if}}
                 </div>
