--- a/templates/dashboard/partials/header.html
+++ b/templates/dashboard/partials/header.html
@@ -6,7 +6,7 @@
         </h1>-->
         {{#if (getBredCrumbStack)}}
             <div id="breadcrumbid" style="margin-top: 10px;">
-                {{> breadCrumb (getBredCrumbStack)}}
+                {{> breadcrumb (getBredCrumbStack)}}
            </div>
         {{else}}
             <ol class="breadcrumb" style="margin-top: 10px;">
