--- a/templates/dashboard/pages/uploadDocs.html
+++ b/templates/dashboard/pages/uploadDocs.html
@@ -1,38 +1,50 @@
 {{{{raw-helper}}}}
 <style>
-.upload-files-content{margin-top:30px;margin-right:auto;margin-left:auto}.btn-glyphicon{padding:6px;background:#fff}.uploadform{margin-bottom:25px}.hidden{display:none!important;visibility:hidden!important}input[type=file]{width:100px;color:transparent}.show{display:block!important}.mydiv{position:absolute;top:50%;left:50%;margin-top:-50px;margin-left:-50px;width:100px;height:100px}
+.upload-files-content{margin-top:30px;margin-right:auto;margin-left:auto}.btn-glyphicon{padding:6px;background:#fff}.uploadform{margin-bottom:25px}.hidden{display:none!important;visibility:hidden!important}input[type=file]{width:100px;color:transparent}.show{display:block!important}.mydiv{position:absolute;top:50%;left:50%;margin-top:-50px;margin-left:-50px;width:100px;height:100px}.container{margin-top:20px}.image-preview-clear{position:relative;overflow:hidden;margin:0;color:#333;background-color:#fff;border-color:#ccc}.float-left-child{display:inline-block}.image-preview-input{position:relative;overflow:hidden;margin:0;color:#333;background-color:#fff;border-color:#ccc}.image-preview-input input[type=file]{position:absolute;top:0;right:0;margin:0;padding:0;font-size:20px;cursor:pointer;opacity:0;filter:alpha(opacity=0)}.image-preview-input-title{margin-left:2px}#myProgress{margin-top:10px;position:relative;width:100%;height:15px;background-color:#ddd}#myBar{position:absolute;width:0%;height:100%;background-color:#4caf50}
 </style>
 {{{{/raw-helper}}}}
 {{> header}}
 <div class='upload-files'>
      <div class="col-sm-12">
          <div>
-                <form id="myform" class="form-inline" role="form" data-toggle="validator">
-                        <div class="form-group">
-                          <label for="typeofdocument">Doc Type:</label>
-                          <select class="form-control" id="typeofdocument">
-                              <option value="License">License</option>
-                              <option value="Photo">Photo</option>
-                              <option value="LoadDoc">Load doc</option>
-                              <option value="UnloadDoc">Unload doc</option>
-                              <option value="Other">Other</option>
-                            </select>
-                        </div>
-                        <div class="form-group hidden" id="otherinputdiv">
-                          <label for="otherinput"></label>
-                          <input type="text" class="form-control" id="otherinput">
-                        </div>
-                        <div class="form-group" id="uploadform">
-                            <label for="keyName"></label>
-                            <input type="file" name="upload" id="upload" value="Upload">
-                            <!-- <label id="fileLabel">Choose file</label> -->
-                            <!-- <input type="file" id="keyName" class="file" name="photos"/> -->
-                        </div>
-                        <button type="submit" class="btn btn-default">Upload</button>
-                      </form>  
+                    <div class="container">
+                            <form data-toggle="validator" role="form" id='myForm'>            
+                                <!-- <div class="row">   -->
+                                    <div class="form-group col-sm-3">
+                                            <input id="typeofdocument" class="form-control" placeholder="Filetype or name" 
+                                            type="text" required> 
+                                    </div>  
+                                    <div class="col-sm-6 form-group">  
+                                        <div class="input-group image-preview form-group">
+                                            <input type="text" class="form-control image-preview-filename" disabled="disabled">  
+                                            <span class="input-group-btn">
+                                                    <button type="button" class="btn btn-default image-preview-clear" style="display:none;">
+                                                    <span class="glyphicon glyphicon-remove"></span> Clear
+                                                </button>
+                                                <button type="button" type="submit" class="btn btn-default image-preview-upload" 
+                                                style="display:none;">
+                                                    <span class="glyphicon glyphicon-cloud-upload"></span> Upload
+                                                </button>
+                                                <div class="btn btn-default image-preview-input">
+                                                    <span class="glyphicon glyphicon-folder-open"></span>
+                                                    <span class="image-preview-input-title">Browse</span>
+                                                    <input type="file" name="input-file-preview"/> 
+                                                </div>
+                                            </span>
+                                        </div>
+                                       <div id="myProgress" style="display:none;">
+                                                <div id="myBar"></div>
+                                        </div>  
+                                    </div>
+                                    <div class="alert alert-warning col-sm-12" id='alert' role="alert" style="display:none;">
+                                            File type or name is empty
+                                    </div>
+                                <!-- </div> -->
+                           </form>
+                  </div>
          </div> 
          <div class="upload-files-content">
-            <a href="javascript:showUploadedFiles();">View uploaded docs</a>
+            <a href="javascript:showUploadedFiles();" id="upload_link_button">View uploaded docs</a>
          </div>
      </div>
      <div class="row">    
@@ -58,7 +70,6 @@
               <thead>
                 <tr>
                   <th>Filetype</th>
-                  <th>Filename</th>
                   <th>Type of Document</th>
                   <th>Uploadedby</th>
                   <th>Actions</th>
@@ -68,15 +79,14 @@
                 {{#each data}}
                 <tr>
                   <td><i class="fa {{getIcon mimetype}} fa-2x" aria-hidden="true"></i></td>
-                  <td>{{originalname}}</td>
                   <td>{{typeofdocument}}</td>
-                  <td>{{createdby.username}}</td>
+                  <td>{{json createdby 'username'}}</td>
                   <td>
                     <div class="actions">
                     <button class="btn btn-glyphicon" role="button"><span  _id="{{_id}}" id="download" class="glyphicon glyphicon-save"></span></button>
-                     {{#isloggedIn (getLoggedInUser) createdby}} 
+                      {{#isloggedIn (getLoggedInUser) createdby}} 
                     <button class="btn btn-glyphicon"  role="button"><span _id="{{_id}}" id="delete" class="glyphicon glyphicon-trash"></span></button>
-                     {{/isloggedIn}}
+                    {{/isloggedIn}} 
                     </div>
                   </td>
                 </tr>
@@ -93,6 +103,6 @@
 {{{{/raw-helper}}}}
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData(),t=new qq.FineUploaderBasic({request:{endpoint:CONSTANTS.apiServer+"files/service/fileupload",customHeaders:{Authorization:"Bearer "+API_HELPER.getToken()},params:{id:e.id,type:"unknown"},paramsInBody:!1},validation:{allowedExtensions:["jpeg","jpg","txt","png","pdf"],itemLimit:1,sizeLimit:5e6},callbacks:{onComplete:function(e,t,a){location.reload()}},button:document.getElementById("uploadform"),autoUpload:!1,multiple:!1});$("#typeofdocument").on("change",function(){"Other"===this.value?$("#otherinputdiv").removeClass("hidden"):$("#otherinputdiv").addClass("hidden")}),$("#myform").on("submit",function(e){e.preventDefault();var a=UTILS.getCurrentTemplateData(),o="Other"===$("#typeofdocument").val()?$("#otherinput").val():$("#typeofdocument").val();t.setParams({id:a.id,type:o}),t.uploadStoredFiles()}),showUploadedFiles=function(){var t=$("#grid-row-template-details").html(),a=Handlebars.compile(t);if($(".datarea").html(""),$(".datarea").html(a(e)),$(".upload-files-content").find(".pager-container")){var o={};o.total=e.total,o.size=5;new GRID_HELPER.PAGER($(".upload-files-content").find(".pager-container"),o,function(e,t){MENU_HELPER.reloadData({data:{skip:(e-1)*t,limit:t}},function(e){console.log(e),$(".datarea").html(""),$(".datarea").html(a(e))})})}$(".actions").on("click","button",function(e){if("download"===e.target.id){var t={};t.formData=JSON.stringify({name:"AA"}),t.uri="files/service/fileDownload",t.extraHref="id="+$(e.target).attr("_id"),t.type="GET",API_HELPER.downloadFile(t,function(e,t){return e?void console.log("error",e):(console.log(t),void(window.location=t.url))})}else if("delete"===e.target.id){var t={};t.formData=JSON.stringify({name:"AA"}),t.uri="files/service/fileupload",t.extraHref="id="+$(e.target).attr("_id"),t.type="DELETE",API_HELPER.uploadFiles(t,function(e,t){return e?void console.log("error",e):void location.reload()})}})}});
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData(),i=new qq.FineUploaderBasic({request:{endpoint:CONSTANTS.apiServer+"files/service/fileupload",customHeaders:{Authorization:"Bearer "+API_HELPER.getToken()},params:{id:e.id,type:"unknown"},paramsInBody:!1},validation:{allowedExtensions:["jpeg","jpg","txt","png","pdf","doc","docx","xls"],itemLimit:1,sizeLimit:5e6},callbacks:{onProgress:function(e,i,a,t){var o=a/t*100;$("#myProgress").show(),$("#myBar").attr("style","width: "+o+"%")},onError:function(e,i,a){console.log("Error..",a)},onComplete:function(e,i,a){MENU_HELPER.reloadData({data:{skip:0,limit:5}},function(e){showUploadedFiles(),$("#myProgress").hide(),$("#myForm").find("input").val("")})}},autoUpload:!1,multiple:!1,debug:!1});$(".image-preview-clear").click(function(){$(".image-preview-filename").val(""),$(".image-preview-clear").hide(),$(".image-preview-input input:file").val(""),$(".image-preview-input-title").text("Browse"),$(".image-preview-input").show(),$(".image-preview-upload").hide(),i.clearStoredFiles()}),$(".image-preview-upload").click(function(){var a=$("#typeofdocument").val();return $.trim(a).length?(i.setParams({id:e.id,type:a}),void i.uploadStoredFiles()):($(".alert").show(),!1)}),$(".image-preview-input input:file").change(function(e){var a=this.files[0];$(".image-preview-input-title").text("Upload"),$(".image-preview-clear").show(),$(".image-preview-upload").show(),$(".image-preview-input").hide(),$(".image-preview-filename").val(a.name),i.addFiles(a)}),showUploadedFiles=function(){$("#upload_link_button").hide();var i=$("#grid-row-template-details").html(),a=Handlebars.compile(i);if($(".datarea").html(""),$(".datarea").html(a(e)),$(".upload-files-content").find(".pager-container")){var t={};t.total=e.total,t.size=5;new GRID_HELPER.PAGER($(".upload-files-content").find(".pager-container"),t,function(e,i){MENU_HELPER.reloadData({data:{skip:(e-1)*i,limit:i}},function(e){console.log(e),$(".datarea").html(""),$(".datarea").html(a(e))})})}$(".actions").on("click","button",function(e){if("download"===e.target.id){var i={};i.formData=JSON.stringify({name:"AA"}),i.uri="files/service/fileDownload",i.extraHref="id="+$(e.target).attr("_id"),i.type="GET",API_HELPER.downloadFile(i,function(e,i){return e?void console.log("error",e):(console.log(i),void(window.location=i.url))})}else if("delete"===e.target.id){var i={};i.formData=JSON.stringify({name:"AA"}),i.uri="files/service/fileupload",i.extraHref="id="+$(e.target).attr("_id"),i.type="DELETE",API_HELPER.uploadFiles(i,function(e,i){return e?void console.log("error",e):void location.reload()})}})}});
 </script>
 {{{{/raw-helper}}}}
