--- a/templates/dashboard/pages/uploadDocs/uploadDocs.less
+++ b/templates/dashboard/pages/uploadDocs/uploadDocs.less
@@ -35,3 +35,59 @@
 	width: 100px;
 	height: 100px;
 }
+
+
+.container{
+  margin-top:20px;
+}
+
+.image-preview-clear {
+  position: relative;
+overflow: hidden;
+margin: 0px;    
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;    
+}
+
+.float-left-child {
+  display: inline-block;
+}
+
+.image-preview-input {
+  position: relative;
+overflow: hidden;
+margin: 0px;    
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;    
+}
+.image-preview-input input[type=file] {
+position: absolute;
+top: 0;
+right: 0;
+margin: 0;
+padding: 0;
+font-size: 20px;
+cursor: pointer;
+opacity: 0;
+filter: alpha(opacity=0);
+}
+.image-preview-input-title {
+  margin-left:2px;
+}
+
+#myProgress {
+  margin-top: 10px;
+  position: relative;
+  width: 100%;
+  height: 15px;
+  background-color: #ddd;
+}
+
+#myBar {
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  background-color: #4CAF50;
+}
